[#201] Implement fetch() in the DAS API
[#223] Updates in docstrings and logging messages