@@ -1,2 +1,3 @@
 [#201] Implement fetch() in the DAS API
 [#223] Updates in docstrings and logging messages
+[#210] Improve message error when connecting to the server
